horizontal scrolling solved

--- a/src/app/weather/weather.component.scss
+++ b/src/app/weather/weather.component.scss
@@ -25,11 +25,11 @@
             flex-direction: column;
 
             app-main {
-                width: 100%;
+                width: 95%;
             }
 
             app-details {
-                width: 100%;
+                width: 95%;
             }
         }
     }
