--- a/src/styles.scss
+++ b/src/styles.scss
@@ -42,6 +42,8 @@ body {
 
 html,
 body {
+  // width: 95%;
+  overflow-x: hidden;
   height: 100%;
   background-color: #ececec;
 }
